# Rerfolary

./: AGENT.md  README.MD  settings.gradle.kts  settings.gradle.kts.bak
.acside/editor/: openedFiles.json  openedFiles.json.bak
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/kashif/folar/builder/: BuilderFactory.kt  CameraControllerBuilder.kt
app/src/main/java/com/kashif/folar/compose/: CameraPreviewView.kt  FolarScreen.kt  RememberFolarState.kt
app/src/main/java/com/kashif/folar/controller/: CameraController.kt
app/src/main/java/com/kashif/folar/enums/: AspectRatio.kt  CameraDeviceType.kt  CameraLens.kt  Directory.kt  FlashMode.kt  ImageFormat.kt  QualityPrioritization.kt  Rotation.kt  TorchMode.kt
app/src/main/java/com/kashif/folar/permissions/: Permissions.kt
app/src/main/java/com/kashif/folar/plugins/: Plugin.kt
app/src/main/java/com/kashif/folar/qrscannerplugin/: QRScannerPlugin.kt
app/src/main/java/com/kashif/folar/result/: ImageCaptureResult.kt
app/src/main/java/com/kashif/folar/state/: FolarState.kt  FolarStateHolder.kt
app/src/main/java/com/kashif/folar/ui/: CameraPreview.kt
app/src/main/java/com/kashif/folar/utils/: CameraContextProvider.kt  Extensions.kt  InvalidConfigurationException.kt  MemoryManager.kt  NativeBridge.kt
app/src/main/java/com/kashif/imagesaverplugin/: ImageSaverPlugin.kt
app/src/main/java/com/kashif/ocrPlugin/: OcrPlugin.kt
app/src/main/java/com/kashif/qrscannerplugin/: QRScannerPlugin.kt
app/src/main/jni/: CMakeLists.txt  NativeBridge.cpp
gradle/: libs.versions.toml
(+9 files in other folders)
